# fastapi-react-starter

./: .gitignore  .pre-commit-config.yaml  .vercelignore  DEPENDENCIES.md  Makefile  PORTING_NOTES.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  keep-warm.yml
backend/: .env.example  alembic.ini  openapi.json  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_items_example.py
backend/app/: main.py
backend/app/core/: config.py  db.py  deps.py  jwt.py  logging.py
backend/app/features/items/: __init__.py  model.py  router.py  schema.py
backend/scripts/: export_openapi.py  init-roles.sql
backend/tests/: conftest.py  test_dependency_graph.py  test_rls_session.py
docs/: strangler-fig.md
frontend/: .env.example  .eslintrc.cjs  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/ui/: README.md  button.tsx  card.tsx  form.tsx  input.tsx  toast.tsx
frontend/src/features/items/: CreateItemForm.tsx  ItemsList.tsx  hooks.ts
frontend/src/lib/: api.ts  supabase.ts  utils.test.ts
frontend/src/pages/: Items.tsx  SignIn.tsx
frontend/src/types/: api.d.ts
