[project]
name = "fastapi-react-starter-backend"
version = "0.1.0"
description = "FastAPI backend for the starter template."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy>=2.0,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.13,<2.0",
    # Pinned exact because openapi.json drift-check depends on identical
    # schema output between local generation and CI. Bump deliberately and
    # regenerate openapi.json + TS types when updating.
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "pyjwt[crypto]>=2.9,<3.0",
    "httpx>=0.27,<1.0",
    "structlog>=24.4,<25.0",
    "slowapi>=0.1.9,<0.2",
    "python-multipart>=0.0.12",
    # Sync driver for Alembic (async driver asyncpg is used by the app at runtime).
    # psycopg3 binary wheels ship for Linux/macOS/Windows; no compilation.
    "psycopg[binary]>=3.2,<4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.9",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.8",
    "pytest-cov>=5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle, pyflakes
    "I",                 # isort
    "B",                 # flake8-bugbear
    "UP",                # pyupgrade
    "ASYNC",             # flake8-async
    "S",                 # flake8-bandit (security)
    "RUF",               # ruff-specific
    "TID",               # tidy imports
]
ignore = [
    "S101",  # assert is fine in tests
    "E501",  # long lines occasionally fine
]

[tool.ruff.lint.per-file-ignores]
# Tests use subprocess, Path, and synchronous DB drivers inside async fixtures
# legitimately — these rules apply to production handlers, not test setup.
"tests/**" = ["S", "B", "ASYNC", "TID251"]
"**/tests/**" = ["S", "B", "ASYNC", "TID251"]
# Alembic is framework scaffolding — don't fight its layout conventions.
"alembic/**" = ["I001"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# Block blocking libraries inside async route handlers. The escape hatch is
# `from starlette.concurrency import run_in_threadpool`. If you see this error
# and the call truly must happen, wrap in run_in_threadpool.
"psycopg2".msg = "Use SQLAlchemy async + asyncpg. For true blocking work, wrap in run_in_threadpool."
"requests".msg = "Use httpx.AsyncClient. For true blocking work, wrap in run_in_threadpool."

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["alembic.*", "testcontainers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "app"]
python_files = "test_*.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
